--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "purple_void",
+  "name": "purple void",
   "displayName": "Purple Void",
   "description": "Black theme with purple accents.",
   "version": "1.0.0",
